--- a/operator/src/main/resources/application.yml
+++ b/operator/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: movie-service
 
   datasource:
-    url: jdbc:mysql://localhost:3306/streamingonlinedb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://${MYSQL_HOST}:3306/streamingonlinedb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${MYSQL_USER:root}
     password: ${MYSQL_PASSWORD:1234}
     driver-class-name: com.mysql.cj.jdbc.Driver
