--- a/search/src/main/resources/application.yml
+++ b/search/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: search-service
 
   datasource:
-    url: jdbc:mysql://localhost:3306/streamingonlinedb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://${MYSQL_HOST}:3306/streamingonlinedb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
