--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -28,11 +28,10 @@ server:
   port: 8762
         
 eureka:
-  instance:
-    preferIpAddress: true
-    hostname: ${HOSTNAME:localhost}
   client:
+    serviceUrl:
+      defaultZone: http://${EUREKA_SERVER:localhost}:${EUREKA_PORT:8761}/eureka/
     registerWithEureka: true
     fetchRegistry: true
-    serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+  instance:
+    preferIpAddress: true
