--- a/operator/src/main/resources/application.yml
+++ b/operator/src/main/resources/application.yml
@@ -15,14 +15,12 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQLDialect
-
 
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://${EUREKA_SERVER:localhost}:${EUREKA_PORT:8761}/eureka/
-    register-with-eureka: true
-    fetch-registry: true
+    registerWithEureka: true
+    fetchRegistry: true
   instance:
-    prefer-ip-address: true
+    preferIpAddress: true
