--- a/search/src/main/resources/application.yml
+++ b/search/src/main/resources/application.yml
@@ -15,7 +15,6 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQL5Dialect
 
   elasticsearch:
     rest:
@@ -25,9 +24,9 @@ spring:
 
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://${EUREKA_SERVER:localhost}:${EUREKA_PORT:8761}/eureka/
-    register-with-eureka: true
-    fetch-registry: true
+    registerWithEureka: true
+    fetchRegistry: true
   instance:
-    prefer-ip-address: true
+    preferIpAddress: true
