--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,32 +1,51 @@
 spring:
   application:
     name: gateway
-  
-  cloud:
-    gateway:
-      server:
-        webflux:
-          discovery:
-            locator:
-              enabled: true
-              lower-case-service-id: true
-          globalcors:
-            cors-configurations:
-              '[/**]':
-                allowedOrigins: ${ALLOWED_ORIGINS:*}
-                allowedHeaders: "*"
-                allowedMethods:
-                  - GET
-                  - POST
-                  - PUT
-                  - DELETE
-                  - PATCH
-      default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+
+cloud:
+  gateway:
+    routes:
+      - id: frontend
+        uri: http://frontend:3000
+        predicates:
+          - Path=/
+        filters:
+          - Logging
+      - id: servicio-a
+        uri: http://service-a:8081
+        predicates:
+          - Path=/api
+        filters:
+          - Logging
+      - id: servicio-b
+        uri: http://service-b:8082
+        predicates:
+          - Path=/bpi
+        filters:
+          - Logging
+    server:
+      webflux:
+        discovery:
+          locator:
+            enabled: true
+            lower-case-service-id: true
+        globalcors:
+          cors-configurations:
+            "[/**]":
+              allowedOrigins: ${ALLOWED_ORIGINS:*}
+              allowedHeaders: "*"
+              allowedMethods:
+                - GET
+                - POST
+                - PUT
+                - DELETE
+                - PATCH
+    default-filters:
+      - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
 
 server:
   port: 8762
-        
+
 eureka:
   client:
     serviceUrl:
