--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
           globalcors:
             cors-configurations:
               '[/**]':
-                allowedOrigins: ${ALLOWED_ORIGINS:*}
+                allowedOrigins: "http://localhost:3000"
                 allowedHeaders: "*"
                 allowedMethods:
                   - GET
